docker-kubernetes/mastering-kubernetes/ch4-security/deny-all-network-policy.yaml
---
# To use network policies responsibly, consider starting with a deny-all network policy:
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
